# hello_google

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/hello_google/: main.py  models.py  protocols.py
src/hello_google/adapters/: usecases.py
src/hello_google/functions/: google.py
tests/: test_basic.py
